ivy/kubernetes/overlays/nginx-ingress/ivy-engine-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ivy-engine 
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ivy-engine 
            port: 
              number: 8080
